--- a/DataTypeExercise.ipynb
+++ b/DataTypeExercise.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "DataTypeExercise.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyNQjpBFW1+Zr0bSMzo/JD1p",
+      "authorship_tag": "ABX9TyPthu72DUk5IWqqFLq4Dq/b",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -76,10 +76,71 @@
         "print(helloworld)"
       ],
       "metadata": {
-        "id": "hs0a2h6nF-V1"
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hs0a2h6nF-V1",
+        "outputId": "fb3b57ea-e6c0-46ed-d578-956b193b2520"
       },
-      "execution_count": null,
-      "outputs": []
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n",
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "helloworld = \"hello\" + \" \" + \"world\"\n",
+        "print(helloworld)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "nas1UfE0M3u8",
+        "outputId": "2a234853-ca1f-437a-82d2-12e61a89e3d8"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hello world\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "lotsofhellos = \"hello\" * 10\n",
+        "print(lotsofhellos)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "QsDVk3zuNGAc",
+        "outputId": "dbae1211-5b20-40bc-9a2d-d5a11056aea9"
+      },
+      "execution_count": 7,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "hellohellohellohellohellohellohellohellohellohello\n"
+          ]
+        }
+      ]
     }
   ]
 }
