--- a/StringOperation.ipynb
+++ b/StringOperation.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "StringOperation.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyOqnDD0Jds1wuF5QKhHnmCv",
+      "authorship_tag": "ABX9TyNWjqYibsiyRFHQfK8MtWGQ",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 1,
+      "execution_count": 2,
       "metadata": {
-        "id": "dguPw3fpT362",
-        "outputId": "6f45e099-570a-4829-9d6d-552fee66082f",
         "colab": {
           "base_uri": "https://localhost:8080/"
-        }
+        },
+        "id": "dguPw3fpT362",
+        "outputId": "054e44d5-c5db-4eab-f699-744bb6bde35b"
       },
       "outputs": [
         {
@@ -52,6 +52,298 @@
         "print(\"single quotes are ' '\")\n",
         "\n",
         "print(len(astring))"
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring.index(\"o\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "NNlB4C2wUYWO",
+        "outputId": "5e697483-76e4-4bab-e87a-ac88167cbdf6"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "4\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring.count(\"l\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "LMr7LZRlVYLr",
+        "outputId": "532b3d5d-7b6d-44c6-a0a5-c754c423a738"
+      },
+      "execution_count": 6,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "3\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring[3:7])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "esXGIWwmVigN",
+        "outputId": "679ecce4-da21-443c-de5a-feddac83034a"
+      },
+      "execution_count": 8,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "lo w\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring[3:7:2])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "YlrvVQ-PWA6F",
+        "outputId": "1a387210-a248-4b5a-d110-2909b022e81a"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "l \n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring[3:7])\n",
+        "print(astring[3:7:1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "9d7TNGCwXIJo",
+        "outputId": "fd537571-615f-433d-af99-7c418eea1ede"
+      },
+      "execution_count": 12,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "lo w\n",
+            "lo w\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "#Reverse string \n",
+        "astring = \"Hello world!\"\n",
+        "print(astring[::-1])"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "_pxQdc23XKbm",
+        "outputId": "0c8b7476-850c-40d0-eee0-6e90ab2887f0"
+      },
+      "execution_count": 14,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "!dlrow olleH\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring.upper())\n",
+        "print(astring.lower())"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "GTqZe4eaXoCI",
+        "outputId": "03d7c0de-d923-4e15-b82d-67eaadb7b2ba"
+      },
+      "execution_count": 16,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "HELLO WORLD!\n",
+            "hello world!\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "print(astring.startswith(\"Hello\"))\n",
+        "print(astring.endswith(\"asdfasdfasdf\"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "mTZK2U6VXyqf",
+        "outputId": "560bf6fb-8f19-4fea-8670-33e562289edf"
+      },
+      "execution_count": 18,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "True\n",
+            "False\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "astring = \"Hello world!\"\n",
+        "afewwords = astring.split(\" \")"
+      ],
+      "metadata": {
+        "id": "h00DiCRfX4Xe"
+      },
+      "execution_count": 21,
+      "outputs": []
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "s = \"Hello World! Sneha C\"\n",
+        "# Length should be 20\n",
+        "print(\"Length of s = %d\" % len(s))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "T339rVxcZIP1",
+        "outputId": "5711e3be-258f-4b30-bfa9-1bfe7aa9b764"
+      },
+      "execution_count": 2,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "Length of s = 20\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "print(\"a occurs %d times\" % s.count(\"a\"))\n",
+        "\n",
+        "# Slicing the string into bits\n",
+        "print(\"The first five characters are '%s'\" % s[:5]) # Start to 5\n",
+        "print(\"The next five characters are '%s'\" % s[5:10]) # 5 to 10\n",
+        "print(\"The thirteenth character is '%s'\" % s[12]) # Just number 12\n",
+        "print(\"The characters with odd index are '%s'\" %s[1::2]) #(0-based indexing)\n",
+        "print(\"The last five characters are '%s'\" % s[-5:]) # 5th-from-last to end\n",
+        "\n",
+        "# Convert everything to uppercase\n",
+        "print(\"String in uppercase: %s\" % s.upper())\n",
+        "\n",
+        "# Convert everything to lowercase\n",
+        "print(\"String in lowercase: %s\" % s.lower())\n",
+        "\n",
+        "# Check how a string starts\n",
+        "if s.startswith(\"Str\"):\n",
+        "    print(\"String starts with 'Str'. Good!\")\n",
+        "\n",
+        "# Check how a string ends\n",
+        "if s.endswith(\"ome!\"):\n",
+        "    print(\"String ends with 'ome!'. Good!\")\n",
+        "\n",
+        "# Split the string into three separate strings,\n",
+        "# each containing only a word\n",
+        "print(\"Split the words of the string: %s\" % s.split(\" \"))"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "7OHF6cT0AjBx",
+        "outputId": "2f48ef2f-5477-474d-a492-805580299614"
+      },
+      "execution_count": 4,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "a occurs 1 times\n",
+            "The first five characters are 'Hello'\n",
+            "The next five characters are ' Worl'\n",
+            "The thirteenth character is ' '\n",
+            "The characters with odd index are 'el ol!SeaC'\n",
+            "The last five characters are 'eha C'\n",
+            "String in uppercase: HELLO WORLD! SNEHA C\n",
+            "String in lowercase: hello world! sneha c\n",
+            "Split the words of the string: ['Hello', 'World!', 'Sneha', 'C']\n"
+          ]
+        }
       ]
     }
   ]
