--- a/Dictionaries.ipynb
+++ b/Dictionaries.ipynb
@@ -6,7 +6,7 @@
       "name": "Dictionaries.ipynb",
       "provenance": [],
       "collapsed_sections": [],
-      "authorship_tag": "ABX9TyMU1eHjRKvKHCFueWtSMlL8",
+      "authorship_tag": "ABX9TyPEyu78favLKVGh7cFiStF+",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -147,10 +147,76 @@
     {
       "cell_type": "code",
       "source": [
+        "phonebook = {\n",
+        "   \"John\" : 938477566,\n",
+        "   \"Jack\" : 938377264,\n",
+        "   \"Jill\" : 947662781\n",
+        "}\n",
+        "phonebook.pop(\"John\")\n",
+        "print(phonebook)"
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "hMQ5eDqVMaEg",
+        "outputId": "c21f46e8-c837-412c-b1a4-2dcd27549ac6"
+      },
+      "execution_count": 10,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Jack': 938377264, 'Jill': 947662781}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "phonebook = {  \n",
+        "    \"John\" : 938477566,\n",
+        "    \"Jack\" : 938377264,\n",
+        "    \"Jill\" : 947662781\n",
+        "}  \n",
+        "phonebook.pop(\"John\")\n",
+        "print(phonebook)\n",
+        "\n",
+        "\n",
+        "# testing code\n",
+        "if \"Jake\" in phonebook:  \n",
+        "    print(\"Jake is listed in the phonebook.\")\n",
+        "    \n",
+        "if \"Jill\" not in phonebook:      \n",
+        "    print(\"Jill is not listed in the phonebook.\")  "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "A58tu58PNxPM",
+        "outputId": "c9513ccb-cf63-420b-ce78-98afec3333a4"
+      },
+      "execution_count": 17,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "{'Jack': 938377264, 'Jill': 947662781}\n"
+          ]
+        }
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
         ""
       ],
       "metadata": {
-        "id": "hMQ5eDqVMaEg"
+        "id": "4I62WPFVQKsf"
       },
       "execution_count": null,
       "outputs": []
