--- a/ForLoop.ipynb
+++ b/ForLoop.ipynb
@@ -5,7 +5,7 @@
     "colab": {
       "name": "ForLoop.ipynb",
       "provenance": [],
-      "authorship_tag": "ABX9TyMVwZFISIe2+EmTiRiMVIrt",
+      "authorship_tag": "ABX9TyMTfV/cMTebk2j6hOIlcud5",
       "include_colab_link": true
     },
     "kernelspec": {
@@ -29,13 +29,13 @@
     },
     {
       "cell_type": "code",
-      "execution_count": 8,
+      "execution_count": 9,
       "metadata": {
         "colab": {
           "base_uri": "https://localhost:8080/"
         },
         "id": "6VrCLiIe6fgJ",
-        "outputId": "738a7e2d-81f2-42a3-90ba-5475140cd1e2"
+        "outputId": "7e5cfe29-a403-4439-80fe-868e2a53d8b6"
       },
       "outputs": [
         {
@@ -55,6 +55,38 @@
         "  for j in range(0, i+1):\n",
         "    print(\"*\", end= \" \")\n",
         "  print(\"\\r\")   "
+      ]
+    },
+    {
+      "cell_type": "code",
+      "source": [
+        "a = 1\n",
+        "for i in range (0,5):\n",
+        "  for j in range(0, i+1):\n",
+        "    print(a, end=\" \")\n",
+        "    a = a+1\n",
+        "  print(\"\\r\") "
+      ],
+      "metadata": {
+        "colab": {
+          "base_uri": "https://localhost:8080/"
+        },
+        "id": "AmjE4vv69CcX",
+        "outputId": "85061043-b57c-451c-f258-b66f012631ec"
+      },
+      "execution_count": 23,
+      "outputs": [
+        {
+          "output_type": "stream",
+          "name": "stdout",
+          "text": [
+            "1 \r\n",
+            "2 3 \r\n",
+            "4 5 6 \r\n",
+            "7 8 9 10 \r\n",
+            "11 12 13 14 15 \r\n"
+          ]
+        }
       ]
     }
   ]
